# foreo-ai

./: .env  README.md  pyproject.toml
foreo/: README.md  article.py  main.py  page.py  utils.py
foreo/core/: article.py  platform.py  utils.py  video.py
