[tool.poetry]
name = "foreo"
version = "0.1.0"
description = ""
authors = ["Kanan Niftiyev <kananniftiyev010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
transformers = "^4.47.0"
torch = "^2.5.1"
colorlog = "^6.9.0"
selenium = "^4.27.1"
python-dotenv = "^1.0.1"
protobuf = "^5.29.2"
sentencepiece = "^0.2.0"
moviepy = "^2.1.1"
gtts = "^2.5.4"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.157.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foreo = "foreo.main:main"

